personal log now shows the team/folder/encryptable variable and if an info message is shown if the encryptable was deleted.

--- a/frontend/app/templates/components/personal-log/table.hbs
+++ b/frontend/app/templates/components/personal-log/table.hbs
@@ -3,7 +3,7 @@
     <tr>
       <th> {{t "log.action"}}</th>
       <th> {{t "log.date"}}</th>
-      <th> {{t "log.where"}}</th>
+      <th> {{t "log.encryptable"}}</th>
     </tr>
   </thead>
   <tbody>
