--- a/frontend/app/templates/components/personal-log/table-row.hbs
+++ b/frontend/app/templates/components/personal-log/table-row.hbs
@@ -1,5 +1,11 @@
 <tr>
   <td>{{t (concat "encryptables.log." @paperTrailVersion.event)}}</td>
   <td>{{moment-format @paperTrailVersion.createdAt "DD.MM.YYYY hh:mm"}}</td>
-  <td>{{@paperTrailVersion.encryptable}}</td>
+  {{#if @paperTrailVersion.encryptable.folder.team}}
+  <td>{{@paperTrailVersion.encryptable.folder.team.name}}
+    /{{@paperTrailVersion.encryptable.folder.name}}
+    /{{@paperTrailVersion.encryptable.name}}</td>
+  {{else}}
+    <td>{{t "log.deleted"}}</td>
+  {{/if}}
 </tr>
