log all update actions, fix problem with sorting logs on update

--- a/frontend/app/templates/components/encryptable/show.hbs
+++ b/frontend/app/templates/components/encryptable/show.hbs
@@ -96,7 +96,7 @@
       </tab.pane>
       <tab.pane @title="Logs" id="log-tab">
         <div>
-          <Encryptable::Table @logs={{@encryptable.paperTrailVersions}}/>
+          <Encryptable::Table @logs={{this.logs}}/>
         </div>
       </tab.pane>
     </BsTab>
