--- a/frontend/app/templates/components/personal-log/table.hbs
+++ b/frontend/app/templates/components/personal-log/table.hbs
@@ -10,5 +10,6 @@
     {{#each @personal_log as |paperTrailVersion|}}
       <Personal-Log::TableRow @paperTrailVersion={{paperTrailVersion}}/>
     {{/each}}
+    <Personal-Log::TableRow @paperTrailVersion={{paperTrailVersion}}/>
   </tbody>
 </table>
