Revert "personal log now loads logs from backend, first working version"
This reverts commit 516c69b4ef3ec9e6179a0ea0537677b4b473cee0.

--- a/frontend/app/templates/components/personal-log/table.hbs
+++ b/frontend/app/templates/components/personal-log/table.hbs
@@ -8,8 +8,7 @@
   </thead>
   <tbody>
     {{#each @personal_log as |paperTrailVersion|}}
-      <Personal-Log::TableRow @paperTrailVersion={{paperTrailVersion}}/>
+      <Log::TableRow @paperTrailVersion={{paperTrailVersion}}/>
     {{/each}}
-    <Personal-Log::TableRow @paperTrailVersion={{paperTrailVersion}}/>
   </tbody>
 </table>
