Revert "Renamed all files for personal log to personal_logs (was log before)"
This reverts commit 682f3e01d7d5746329d787c2da1856401e1c11d9.

--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -95,7 +95,7 @@
           <pzsh-icon name="setting"></pzsh-icon>
           {{ t "profile_title" }}
         </LinkTo>
-        <LinkTo role="button" @route="personal_logs" @tagName="pzsh-menu-dropdown-item">
+        <LinkTo role="button" @route="log" @tagName="pzsh-menu-dropdown-item">
           <pzsh-icon name="bars"></pzsh-icon>
           {{ t "log_title" }}
         </LinkTo>
