Revert "Changed icon for Log in nav bar drop down menu, took the closest one available."
This reverts commit 4bcdc377243a51793bcc2dac11b508bda4697314.

--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -96,7 +96,7 @@
           {{ t "profile_title" }}
         </LinkTo>
         <LinkTo role="button" @route="log" @tagName="pzsh-menu-dropdown-item">
-          <pzsh-icon name="bars"></pzsh-icon>
+          <pzsh-icon name="setting"></pzsh-icon>
           {{ t "log_title" }}
         </LinkTo>
         <pzsh-menu-dropdown-item href="/session/destroy">
