Revert "Continued frontend implementation for personal log. Refresh on /log doesnt work and paper trail feature aren't included yet."
This reverts commit 903cecdbb8a7beaf06a208f99973997791d3aa9f.

--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -97,7 +97,7 @@
         </LinkTo>
         <LinkTo role="button" @route="log" @tagName="pzsh-menu-dropdown-item">
           <pzsh-icon name="setting"></pzsh-icon>
-          {{ t "log_title" }}
+          {{ t "log" }}
         </LinkTo>
         <pzsh-menu-dropdown-item href="/session/destroy">
           <pzsh-icon name="sign-out-alt"></pzsh-icon>
