--- a/frontend/app/templates/log.hbs
+++ b/frontend/app/templates/log.hbs
@@ -3,24 +3,34 @@
   <div class="pt-3">
     <div class="row justify-content-between">
       <div class="col-lg-auto">
-        <h2>{{t "log.info"}}</h2>
+        <h2>{{t "profile.index.title"}}</h2>
+      </div>
+      <div class="col-md-auto">
+        <Profile::PasswordUpdate></Profile::PasswordUpdate>
       </div>
     </div>
-    <table class="table table-striped mt-20">
-      <thead>
-        <tr>
-          <th> {{t "log.action"}}</th>
-          <th> {{t "log.date"}}</th>
-          <th> {{t "log.where"}}</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>these are not implemented yet</td>
-          <td>this neither {{moment-format @model.info.lastLoginAt "DD.MM.YYYY hh:mm"}}</td> 
-          <td>nope just example {{@model.info.lastLoginFrom}}</td>
-        </tr>
-      </tbody>
-    </table>
+    <BsTab as |tab|>
+      <tab.pane id="info" @title={{t "profile.info.info"}}>
+        <table class="table table-striped mt-20">
+          <thead>
+            <tr>
+              <th> {{t "profile.info.last_login_at"}}</th>
+              <th> {{t "profile.info.last_login_from"}}</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>{{moment-format @model.info.lastLoginAt "DD.MM.YYYY hh:mm"}}</td>
+              <td>{{@model.info.lastLoginFrom}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </tab.pane>
+      <tab.pane id="apiUsers" @title={{t "profile.api_users.api_users"}}>
+        <div>
+          <ApiUser::Table @apiUsers={{@model.apiUsers}} />
+        </div>
+      </tab.pane>
+    </BsTab>
   </div>
 </div>
