add load more button to always load 10 logs at a time

--- a/frontend/app/templates/components/encryptable/show.hbs
+++ b/frontend/app/templates/components/encryptable/show.hbs
@@ -98,6 +98,11 @@
         <div>
           <Encryptable::Table @logs={{this.logs}}/>
         </div>
+        {{#if this.canLoadMore}}
+          <BsButton @type="secondary" {{on "click" this.loadMore}}>
+            {{t "encryptables.show.load_more"}}
+          </BsButton>
+        {{/if}}
       </tab.pane>
     </BsTab>
   </div>
