fixed rebasing issues

--- a/frontend/app/templates/components/team/show.hbs
+++ b/frontend/app/templates/components/team/show.hbs
@@ -11,7 +11,7 @@
   <div>
     <div class="row py-2 d-flex team-card-header {{if this.collapsed "rounded" "rounded-top"}}">
       <div class="col-auto pr-0 my-auto" role="button" {{on "click" this.collapse}}>
-        {{#if @team.personal_team}}
+        {{#if @team.isPersonalTeam}}
           <img class="icon icon-big-button py-auto" src="/assets/images/member-white.svg" alt="">
         {{else}}
           {{#if this.args.team.private}}
@@ -31,7 +31,7 @@
           <img class="icon-big-button" src="/assets/images/plus-white.svg" alt="new">
           <BsTooltip @title={{t "tooltips.add_folder"}} @delayShow="1000" />
         </span>
-        {{#unless @team.personal_team}}
+        {{#unless @team.isPersonalTeam}}
           <span class="mx-1" role="button" {{on "click" this.toggleTeamEdit}}>
             <img class="icon-big-button" src="/assets/images/edit-white.svg" alt="edit">
             <BsTooltip @title={{t "teams.edit.title"}} @delayShow="1000" />
