only show the logs of this user in the personal log table

--- a/frontend/app/templates/components/personal-log/table.hbs
+++ b/frontend/app/templates/components/personal-log/table.hbs
@@ -7,7 +7,7 @@
     </tr>
   </thead>
   <tbody>
-    {{#each @personal_log as |paperTrailVersion|}}
+    {{#each this.logs as |paperTrailVersion|}}
       <Personal-Log::TableRow @paperTrailVersion={{paperTrailVersion}}/>
     {{/each}}
   </tbody>
