--- a/frontend/app/templates/components/encryptable/show.hbs
+++ b/frontend/app/templates/components/encryptable/show.hbs
@@ -21,6 +21,9 @@
         <a id="edit_account_button" class="btn btn-secondary edit_button" role="button" {{on "click" this.toggleEncryptableEdit}}>
           <img class="icon-button" src="/assets/images/edit.svg" alt="edit">
         </a>
+        <a id="share_encryptable_button" class="btn btn-secondary edit_button" role="button" {{on "click" this.toggleEncryptableShare}}>
+          <img class="icon-button" src="/assets/images/share.svg" alt="share">
+        </a>
       </div>
     {{/unless}}
   </div>
