change header names in logs table, add space between tabs and log table

--- a/frontend/app/templates/components/encryptable/table.hbs
+++ b/frontend/app/templates/components/encryptable/table.hbs
@@ -1,9 +1,9 @@
 <table class="table table-striped mt-20 mb-15">
   <tbody>
     <tr>
-      <th> {{t "actions"}} </th>
-      <th> {{t "username" }} </th>
-      <th> {{t "encryptables.show.created_at" }} </th>
+      <th> {{t "encryptables.show.action"}} </th>
+      <th> {{t "user" }} </th>
+      <th> {{t "encryptables.show.date_time" }} </th>
     </tr>
   </tbody>
   <tbody>
