--- a/frontend/app/templates/components/admin/user/table-row.hbs
+++ b/frontend/app/templates/components/admin/user/table-row.hbs
@@ -25,7 +25,7 @@
     {{#if @user.editable}}
       <span role="button" {{on "click" this.toggleEditing}}>
         <img class="icon-medium-button d-inline" src="/assets/images/edit.svg" alt="edit">
-        <BsTooltip @title={{t "encryptables.edit.title"}} @delayShow="1000"/>
+        <BsTooltip @title={{t "admin.users.edit.title"}} @delayShow="1000"/>
       </span>
     {{/if}}
     {{#if @user.deletable}}
