--- a/frontend/app/templates/components/encryptable/card-show.hbs
+++ b/frontend/app/templates/components/encryptable/card-show.hbs
@@ -40,7 +40,7 @@
         <div class="col-sm-8 pr-0">
           <div class="password-wrapper">
             <Input class="d-inline form-control" @disabled="true" @value={{@encryptable.cleartextPassword}}/>
-            <div role="button" class="show-password-link show-password-link-sm {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}} href="#">{{t "encryptables.show.show_password"}}</div>
+            <div role="button" class="show-password-link show-password-link-sm {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}} href="#">{{t "encryptable/credential.show.show_password"}}</div>
           </div>
 
         </div>
@@ -53,13 +53,13 @@
       </div>
     </div>
     <div class="card-footer d-flex justify-content-between">
-      <LinkTo @route="encryptables.show" @model={{@encryptable}}>
+      <LinkTo @route="encryptable/credential.show" @model={{@encryptable}}>
         <img class="icon-button d-inline" src="/assets/images/eye.svg" alt="show">
         <BsTooltip @title={{t "tooltips.encryptable_details"}} @delayShow="1000" />
       </LinkTo>
       <a class="mx-auto" role="button" {{on "click" this.toggleEncryptableEdit}}>
         <img class="icon-button d-inline" src="/assets/images/edit.svg" alt="edit">
-        <BsTooltip @title={{t "encryptables.edit.title"}} @delayShow="1000" />
+        <BsTooltip @title={{t "encryptable/credential.edit.title"}} @delayShow="1000" />
       </a>
       <DeleteWithConfirmation @record={{@encryptable}} @didDelete={{this.refreshRoute}}>
         <img class="icon-button d-inline" src="/assets/images/delete.svg" alt="delete">
