--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -1,5 +1,5 @@
 {{#if this.isNewEncryptable}}
-  <Encryptable::Form @onAbort={{this.toggleEncryptableCreating}} @title={{t "encryptables.new.title"}}/>
+  <Encryptable::Form @onAbort={{this.toggleEncryptableCreating}} @title={{t "encryptable/credential.new.title"}}/>
 {{/if}}
 {{#if this.isNewFolder}}
   <Folder::Form @onAbort={{this.toggleFolderCreating}} @title={{t "folders.new.title"}}/>
@@ -38,7 +38,7 @@
       <dd.menu @align="right" as |ddm|>
         <ddm.item>
           <a role="button" class="dropdown-item" {{on "click" this.toggleEncryptableCreating}}>
-            {{t "encryptables.new.title"}}
+            {{t "encryptable/credential.new.title"}}
           </a>
         </ddm.item>
         <ddm.item>
