--- a/frontend/app/templates/components/encryptable-file/form.hbs
+++ b/frontend/app/templates/components/encryptable-file/form.hbs
@@ -7,17 +7,17 @@
       {{#each this.errors as |error|}}
         <div class="alert alert-danger modal-alert ">
           {{error.detail}}.<br>
-          {{t "file_entries.new.reupload"}}
+          {{t "encryptable_files.new.reupload"}}
         </div>
       {{/each}}
       <div class="row">
         <div class="form-group col-md-12">
           <div>
-            <label>{{t "file_entries.new.choose_file"}}</label>
+            <label>{{t "encryptable_files.new.choose_file"}}</label>
             <div class="dropzone-text">
               {{#if this.changeset.file}}
                 <div class="mb-2">
-                  {{t "file_entries.new.selected_file"}}: {{this.changeset.file.name}}
+                  {{t "encryptable_files.new.selected_file"}}: {{this.changeset.file.name}}
                 </div>
               {{/if}}
               <div>
@@ -28,7 +28,7 @@
                             @onfileadd={{this.uploadFile}}
                             @ondrop={{this.uploadFile}}
                             class="btn btn-primary">
-                  <a id="upload-file" tabindex="0">{{t (if this.changeset.file "file_entries.new.reupload" "file_entries.new.upload_file")}}.</a>
+                  <a id="upload-file" tabindex="0">{{t (if this.changeset.file "encryptable_files.new.reupload" "encryptable_files.new.upload_file")}}.</a>
                 </FileUpload>
               </div>
             </div>
@@ -47,7 +47,7 @@
     </div>
   </Modal.body>
   <Modal.footer>
-    <BsButton @onClick={{action this.submit this.changeset}} @type="primary">{{t "file_entries.new.upload"}}</BsButton>
+    <BsButton @onClick={{action this.submit this.changeset}} @type="primary">{{t "encryptable_files.new.upload"}}</BsButton>
     <BsButton @onClick={{action this.abort}} @type="secondary">{{t "close"}}</BsButton>
   </Modal.footer>
 </BsModal>
