--- a/frontend/app/templates/components/encryptable/form.hbs
+++ b/frontend/app/templates/components/encryptable/form.hbs
@@ -16,7 +16,7 @@
             {{/if}}
             <div class="col-md-6 order-2">
               <form.group class="col-md-12">
-                <form.element @property="name" @label={{t "helpers.label.encryptable.accountname"}}
+                <form.element @property="name" @label={{t "helpers.label.encryptable/credential.accountname"}}
                               class={{if this.changeset.error.name.validation
                                                              "invalid-input-name"}}
                               id="name"
