add Share File to navbar UI

--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -53,6 +53,10 @@
         </ddm.item>
       </dd.menu>
     </BsDropdown>
+    <div class="d-flex align-items-center text-share-file" href="https://github.com/puzzle/cryptopus/wiki/User-manual">
+      <img class="icon-share-file" src="/assets/images/share-blue.svg">
+      <span>{{t "encryptables.share.file"}}</span>
+    </div>
   </div>
 </pzsh-banner>
 
