added translations and fixed tests

--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -54,8 +54,8 @@
       </dd.menu>
     </BsDropdown>
     <div class="d-flex align-items-center text-share-file" href="https://github.com/puzzle/cryptopus/wiki/User-manual">
-      <img class="icon-share-file" src="/assets/images/share-blue.svg">
-      <span>{{t "encryptables.share.file"}}</span>
+      <img class="icon-share-file" src="/assets/images/share-blue.svg" alt="shareIcon">
+      <span>{{t "encryptable/credential.share.title"}}</span>
     </div>
   </div>
 </pzsh-banner>
