add necessary services to nav-bar.js and copy button to nav-bar template.

--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -95,6 +95,10 @@
           <pzsh-icon name="setting"></pzsh-icon>
           {{ t "profile_title" }}
         </LinkTo>
+        <pzsh-menu-dropdown-item role="button" {{on "click" (fn this.copyCcliLogin @user)}}>
+          <pzsh-icon name="clipboard"></pzsh-icon>
+          {{ t "flashes.api.api-users.ccli_login.tooltip" }}
+        </pzsh-menu-dropdown-item>
         <pzsh-menu-dropdown-item href="/session/destroy">
           <pzsh-icon name="sign-out-alt"></pzsh-icon>
           {{ t "logout" }}
