Add icon and change name of Copy CCLI Login button

--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -96,8 +96,8 @@
           {{ t "profile_title" }}
         </LinkTo>
         <pzsh-menu-dropdown-item role="button" {{on "click" (fn this.copyCcliLogin @user)}}>
-          <pzsh-icon name="clipboard"></pzsh-icon>
-          {{ t "flashes.api.api-users.ccli_login.tooltip" }}
+          <pzsh-icon name="plus-circle"></pzsh-icon>
+          {{ t "copy_ccli_login" }}
         </pzsh-menu-dropdown-item>
         <pzsh-menu-dropdown-item href="/session/destroy">
           <pzsh-icon name="sign-out-alt"></pzsh-icon>
