fix rubocop errors

--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -96,7 +96,7 @@
           {{ t "profile_title" }}
         </LinkTo>
         <pzsh-menu-dropdown-item role="button" {{on "click" (fn this.copyCcliLogin @user)}}>
-          <pzsh-icon name="plus-circle"></pzsh-icon>
+          <img src="/assets/images/clipboard.svg" alt="clipboard" class="icon-button">
           {{ t "copy_ccli_login" }}
         </pzsh-menu-dropdown-item>
         <pzsh-menu-dropdown-item href="/session/destroy">
