383 ccli login command button (#620)
* add copyCcliLogin action to navbar

* add necessary services to nav-bar.js and copy button to nav-bar template.

* add ccli_token_controller.rb

* create new api_user if no default_api_user set

* Add icon and change name of Copy CCLI Login button

* Change route to not have user_id

* add ccli_token_controller_specs

* add system specs for CCLI login copy

* fix rubocop errors

Co-authored-by: Julien Gaumez <julien.gaumez@students.unibe.ch>

--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -95,6 +95,10 @@
           <pzsh-icon name="setting"></pzsh-icon>
           {{ t "profile_title" }}
         </LinkTo>
+        <pzsh-menu-dropdown-item role="button" {{on "click" (fn this.copyCcliLogin @user)}}>
+          <img src="/assets/images/clipboard.svg" alt="clipboard" class="icon-button">
+          {{ t "copy_ccli_login" }}
+        </pzsh-menu-dropdown-item>
         <pzsh-menu-dropdown-item href="/session/destroy">
           <pzsh-icon name="sign-out-alt"></pzsh-icon>
           {{ t "logout" }}
