572 log recent credentials on dashboard (#608)
* add translation for Log

* add translation

* Started frontend implementation of Log butten/page
not working atm.

* Continued frontend implementation for personal log. Refresh on /log doesnt work and paper trail feature aren't included yet.

* removed nav side bar from log page and fixed prettier/prettier error

* Changed icon for Log in nav bar drop down menu, took the closest one available.

* Fixed refresh bug when on /log page. (the bug mentioned in earlier commit)

* shows encryptables on dashboard

loads all encryptables of user

* Added basic frontend test for nav bar

* deleted unused code

* Revert "deleted unused code"
Not smart to do this in this branch

This reverts commit 7c435b20d0139f13c5bbc815a7474d6a6bb0ae4c.

* Add spec Test file for the Personal log

* change name and add testes

* change a 'not' mistake

* Adds system specs for encryptables on dashboard

* Fixes frontend spec for dashboard-card

* Updated table in personal log.
Added personal log controller and other stuff.

* Added missing files from last commit

* Renamed all files for personal log to personal_logs (was log before)

* Fixed prettier/prettier errors and renamed one more file to personal_logs that i forgot before

* Fixed one more file with prettier/prettier errors

* personal log now loads logs from backend, first working version

* some minor improvements, but personal log only works if you access it after opening an encryptable

* Loads recent credentials from encryptables controller

* cleanup encryptables_controller.rb

* Revert "some minor improvements, but personal log only works if you access it after opening an encryptable"

This reverts commit 00f99a8cfa3b4944f3f2b592cc221f9ae464e92b.

* Revert "personal log now loads logs from backend, first working version"

This reverts commit 516c69b4ef3ec9e6179a0ea0537677b4b473cee0.

* Revert "Fixed one more file with 

--- a/frontend/app/templates/dashboard.hbs
+++ b/frontend/app/templates/dashboard.hbs
@@ -1,20 +1,32 @@
 <div class="dashboard-grid-container">
+  {{#if @model.recentCredentials}}  
+    <h3 class="primary-header">Recent Credentials</h3>
+    <div class="primary-content">
+      {{#each this.model.recentCredentials as |encryptable|}}
+        <a href="/encryptables/{{encryptable.id}}">
+          <DashboardCard @content={{encryptable}} />
+        </a>
+      {{/each}}
+    </div>	
+  {{/if}}
+
   {{#if @model.favouriteTeams}}
     <h3 class="primary-header">Favourites</h3>
     <div class="primary-content">
       {{#each this.model.favouriteTeams as |team|}}
         <a href="/teams/{{team.id}}">
-          <DashboardCard @team={{team}} />
+          <DashboardCard @content={{team}} />
         </a>
       {{/each}}
     </div>
   {{/if}}
+
   {{#if this.model.teams}}
     <h3 class="primary-header">Teams</h3>
     <div class="primary-content">
       {{#each this.model.teams as |team|}}
         <a href="/teams/{{team.id}}">
-          <DashboardCard @team={{team}} />
+          <DashboardCard @content={{team}} />
         </a>
       {{/each}}
     </div>
