--- a/frontend/app/templates/components/personal-log/table-row.hbs
+++ b/frontend/app/templates/components/personal-log/table-row.hbs
@@ -1,11 +1,11 @@
 <tr>
   <td>{{t (concat "encryptables.log." @paperTrailVersion.event)}}</td>
   <td>{{moment-format @paperTrailVersion.createdAt "DD.MM.YYYY hh:mm"}}</td>
-  <LinkTo @route="encryptables.show" @model={{@paperTrailVersion.encryptableId}}>
+  <LinkTo @route="encryptables.show" @model={{@paperTrailVersion.encryptable.id}}>
     <td>
       {{@paperTrailVersion.teamName}}
       / {{@paperTrailVersion.folderName}}
-      / {{@paperTrailVersion.encryptableName}}
+      / {{@paperTrailVersion.encryptable.name}}
     </td>
   </LinkTo>
 </tr>
