Revert "don't serialize encryptable_name and _id but only use it through belongs_to association"
This reverts commit 0166d18f0c3e831cefef5a1c72b47cbefef6685a.

--- a/frontend/app/templates/components/personal-log/table-row.hbs
+++ b/frontend/app/templates/components/personal-log/table-row.hbs
@@ -1,11 +1,11 @@
 <tr>
   <td>{{t (concat "encryptables.log." @paperTrailVersion.event)}}</td>
   <td>{{moment-format @paperTrailVersion.createdAt "DD.MM.YYYY hh:mm"}}</td>
-  <LinkTo @route="encryptables.show" @model={{@paperTrailVersion.encryptable.id}}>
+  <LinkTo @route="encryptables.show" @model={{@paperTrailVersion.encryptableId}}>
     <td>
       {{@paperTrailVersion.teamName}}
       / {{@paperTrailVersion.folderName}}
-      / {{@paperTrailVersion.encryptable.name}}
+      / {{@paperTrailVersion.encryptableName}}
     </td>
   </LinkTo>
 </tr>
