fetch logs in routes instead of table

--- a/frontend/app/templates/personal_logs.hbs
+++ b/frontend/app/templates/personal_logs.hbs
@@ -6,6 +6,6 @@
         <h2>{{t "log.info"}}</h2>
       </div>
     </div>
-    <Personal-Log::Table></Personal-Log::Table>
+    <Personal-Log::Table @logs{{@model.versions}}/>
   </div>
 </div>
