Revert "fetch logs in routes instead of table"
This reverts commit 18e890166b007daeb8354167b72d15da80032983.

--- a/frontend/app/templates/personal_logs.hbs
+++ b/frontend/app/templates/personal_logs.hbs
@@ -6,6 +6,6 @@
         <h2>{{t "log.info"}}</h2>
       </div>
     </div>
-    <Personal-Log::Table @logs{{@model.versions}}/>
+    <Personal-Log::Table></Personal-Log::Table>
   </div>
 </div>
