--- a/frontend/app/templates/encryptables/edit.hbs
+++ b/frontend/app/templates/encryptables/edit.hbs
@@ -1,1 +1,1 @@
-<Encryptable::Form @encryptable={{this.model}} @title={{t "encryptable/credential.edit.title"}}/>
+<Encryptable::Form @encryptable={{this.model}} @title={{t "encryptable/credentials.edit.title"}}/>
