change translations in line with changes on main

--- a/frontend/app/templates/components/encryptable/table.hbs
+++ b/frontend/app/templates/components/encryptable/table.hbs
@@ -1,9 +1,9 @@
 <table class="table table-striped mt-20 mb-15">
   <tbody>
     <tr>
-      <th> {{t "encryptables.show.action"}} </th>
+      <th> {{t "encryptable/credentials.show.action"}} </th>
       <th> {{t "user" }} </th>
-      <th> {{t "encryptables.show.date_time" }} </th>
+      <th> {{t "encryptable/credentials.show.date_time" }} </th>
     </tr>
   </tbody>
   <tbody>
