--- a/frontend/app/templates/components/encryptable/table-row.hbs
+++ b/frontend/app/templates/components/encryptable/table-row.hbs
@@ -1,5 +1,5 @@
 <tr>
-  <td>{{t (concat "encryptables.log." @paperTrailVersion.event)}}</td>
+  <td>{{t (concat "encryptable/credentials.log." @paperTrailVersion.event)}}</td>
   <td>{{@paperTrailVersion.username}}</td>
   <td>{{moment-format @paperTrailVersion.createdAt "DD.MM.YYYY hh:mm"}}</td>
 </tr>
