Add frontend and controller logic

--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -1,5 +1,8 @@
 {{#if this.isNewEncryptable}}
-  <Encryptable::Form @onAbort={{this.toggleEncryptableCreating}} @title={{t "encryptable/credentials.new.title"}}/>
+  <Encryptable::Form @onAbort={{this.toggleEncryptableCreating}} @title={{t "encryptable/credential.new.title"}}/>
+{{/if}}
+{{#if this.isFileSharing}}
+  <Encryptable::Form @onAbort={{this.toggleFileSharing}} @title={{t "encryptable/sharing/file.new.title"}} @sharing={{true}}/>
 {{/if}}
 {{#if this.isNewFolder}}
   <Folder::Form @onAbort={{this.toggleFolderCreating}} @title={{t "folders.new.title"}}/>
@@ -38,7 +41,7 @@
       <dd.menu @align="right" as |ddm|>
         <ddm.item>
           <a role="button" class="dropdown-item" {{on "click" this.toggleEncryptableCreating}}>
-            {{t "encryptable/credentials.new.title"}}
+            {{t "encryptable/credential.new.title"}}
           </a>
         </ddm.item>
         <ddm.item>
@@ -53,6 +56,12 @@
         </ddm.item>
       </dd.menu>
     </BsDropdown>
+    <div class="d-flex align-items-center text-share-file" href="https://github.com/puzzle/cryptopus/wiki/User-manual">
+    <a role="button" {{on "click" this.toggleFileSharing}}>
+      <img class="icon-share-file" src="/assets/images/share-blue.svg" alt="shareIcon">
+      <span>{{t "encryptable/credential.share.title"}}</span>
+      </a>
+    </div>
   </div>
 </pzsh-banner>
 
