--- a/frontend/app/templates/components/encryptable/row.hbs
+++ b/frontend/app/templates/components/encryptable/row.hbs
@@ -1,5 +1,5 @@
 {{#if this.isEncryptableEditing}}
-  <Encryptable::Form @encryptable={{@encryptable}} @onAbort={{this.toggleEncryptableEdit}}  @title={{t "encryptable/credentials.edit.title"}}/>
+  <Encryptable::Form @encryptable={{@encryptable}} @onAbort={{this.toggleEncryptableEdit}}  @title={{t "encryptable/credential.edit.title"}}/>
 {{/if}}
 <div id={{concat "loader-encryptable-" @encryptable.id}} {{did-insert this.setupInViewport}}>
 </div>
@@ -22,26 +22,26 @@
       <div class="col-2 pr-0 d-none d-md-block">
         <div class="hide-wrapper">
           <Input class="d-inline form-control" id="input-password-{{@encryptable.id}}" @disabled="true" @value={{@encryptable.cleartextUsername}}/>
-          <a role="button" class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isUsernameVisible "visibility-hidden"}}"{{on "click" this.showUsername}}>{{t "encryptable/credentials.show.show_username"}}</a>
+          <a role="button" class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isUsernameVisible "visibility-hidden"}}"{{on "click" this.showUsername}}>{{t "encryptable/credential.show.show_username"}}</a>
         </div>
       </div>
       <div class="col px-0 d-none d-md-block">
         <button class="btn btn-light copy-btn" {{on "click" this.copyUsername}}>
           <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
-          <BsTooltip @title={{t "encryptable/credentials.show.copy_username"}} @delayShow="500" />
+          <BsTooltip @title={{t "encryptable/credential.show.copy_username"}} @delayShow="500" />
         </button>
       </div>
 
       <div class="col-2 pr-0 d-none d-md-block">
         <div class="hide-wrapper">
           <Input class="d-inline form-control" @disabled="true" @value={{@encryptable.cleartextPassword}}/>
-          <a role="button" class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isPasswordVisible "visibility-hidden"}}"{{on "click" this.showPassword}}>{{t "encryptable/credentials.show.show_password"}}</a>
+          <a role="button" class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isPasswordVisible "visibility-hidden"}}"{{on "click" this.showPassword}}>{{t "encryptable/credential.show.show_password"}}</a>
         </div>
       </div>
       <div class="col pl-0 d-none d-md-block">
         <button class="btn btn-light copy-btn" {{on "click" this.copyPassword}}>
           <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
-          <BsTooltip @title={{t "encryptable/credentials.show.copy_password"}} @delayShow="500" />
+          <BsTooltip @title={{t "encryptable/credential.show.copy_password"}} @delayShow="500" />
         </button>
       </div>
     {{/unless}}
@@ -50,13 +50,17 @@
       {{#unless @encryptable.isOseSecret}}
         <a class="mx-1" role="button" {{on "click" this.toggleEncryptableEdit}}>
           <img class="icon-medium-button d-inline" src="/assets/images/edit.svg" alt="edit">
-          <BsTooltip @title={{t "encryptable/credentials.edit.title"}} @delayShow="1000" />
+          <BsTooltip @title={{t "encryptable/credential.edit.title"}} @delayShow="1000" />
         </a>
       {{/unless}}
       <DeleteWithConfirmation @class="mx-1" @record={{@encryptable}} @didDelete={{this.refreshRoute}}>
         <img class="icon-medium-button d-inline" src="/assets/images/delete.svg" alt="delete">
         <BsTooltip @title={{t "tooltips.delete_encryptables"}} @delayShow="1000" />
       </DeleteWithConfirmation>
+      <a class="mx-1" role="button" {{on "click" this.toggleEncryptableEdit}}>
+        <img class="icon-medium-button d-inline" src="/assets/images/share.svg" alt="share">
+        <BsTooltip @title={{t "encryptable/credential.share.title"}} @delayShow="1000" />
+      </a>
     </div>
   </div>
 {{/if}}
