--- a/frontend/app/templates/encryptables/new.hbs
+++ b/frontend/app/templates/encryptables/new.hbs
@@ -1,1 +1,1 @@
-<Encryptable::Form @folder={{this.model}} @title={{t "encryptable/credentials.new.title"}}/>
+<Encryptable::Form @folder={{this.model}} @title={{t "encryptable/credential.new.title"}}/>
